2008-01-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR fortran/34659
	* scanner.c (load_line): Do not count ' ' as printable when checking for
	continuations.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131371 138bc75d-0d04-0410-961f-82ee72b054a4